--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                     </div>
                     <h3 data-lang-en="Image Resizer" data-lang-bn="ছবি রিসাইজার">Image Resizer</h3>
                     <p data-lang-en="Resize images for social media, web, and more without losing quality." data-lang-bn="সোশ্যাল মিডিয়া, ওয়েব এবং অন্যান্য কাজের জন্য ছবির সাইজ পরিবর্তন করুন।">Resize images for social media, web, and more without losing quality.</p>
-                    <a href="url_shortener.html" class="use-tool-btn" ... >Use Tool</a>
+                    <a href="url_shortener.html" class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</a>
                 </div>
                 
                 <div class="tool-card" tabindex="0" data-category="developer" data-lang-en-title="QR Code Generator" data-lang-bn-title="QR কোড জেনারেটর" data-lang-en-desc="Create custom QR codes for URLs, text, and WiFi passwords." data-lang-bn-desc="আপনার URL, টেক্সট, ওয়াইফাই পাসওয়ার্ডের জন্য কাস্টম QR কোড তৈরি করুন।">
