--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                     </div>
                     <h3 data-lang-en="Image Resizer" data-lang-bn="ছবি রিসাইজার">Image Resizer</h3>
                     <p data-lang-en="Resize images for social media, web, and more without losing quality." data-lang-bn="সোশ্যাল মিডিয়া, ওয়েব এবং অন্যান্য কাজের জন্য ছবির সাইজ পরিবর্তন করুন।">Resize images for social media, web, and more without losing quality.</p>
-                    <a href="url_shortener.html" class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</a>
+                    <button class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</button>
                 </div>
                 
                 <div class="tool-card" tabindex="0" data-category="developer" data-lang-en-title="QR Code Generator" data-lang-bn-title="QR কোড জেনারেটর" data-lang-en-desc="Create custom QR codes for URLs, text, and WiFi passwords." data-lang-bn-desc="আপনার URL, টেক্সট, ওয়াইফাই পাসওয়ার্ডের জন্য কাস্টম QR কোড তৈরি করুন।">
@@ -658,7 +658,7 @@
                     </div>
                     <h3 data-lang-en="URL Shortener" data-lang-bn="URL শর্টনার">URL Shortener</h3>
                     <p data-lang-en="Shorten your long URLs with a custom alias for easy sharing." data-lang-bn="আপনার লম্বা URL-কে কাস্টম নাম সহ ছোট করুন।">Shorten your long URLs with a custom alias for easy sharing.</p>
-                    <a href="url_shortener.html" class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</a>
+                    <button class="url_shortener.html" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</button>
                 </div>
 
                 <div class="tool-card" tabindex="0" data-category="calculators" data-lang-en-title="Niche Calculators" data-lang-bn-title="নির্দিষ্ট ক্যালকুলেটর" data-lang-en-desc="A collection of specialized calculators like BMI, EMI, and more." data-lang-bn-desc="BMI, EMI, এবং অন্যান্য প্রয়োজনীয় ক্যালকুলেটর ব্যবহার করুন।">
