--- a/index.html
+++ b/index.html
@@ -653,13 +653,13 @@
                 </div>
 
                 <div class="tool-card" tabindex="0" data-category="developer" data-lang-en-title="URL Shortener" data-lang-bn-title="URL শর্টনার" data-lang-en-desc="Shorten your long URLs with a custom alias for easy sharing." data-lang-bn-desc="আপনার লম্বা URL-কে কাস্টম নাম সহ ছোট করুন।">
-    <div class="icon-wrapper">
-        <i class="ri-link-m icon"></i>
-    </div>
-    <h3 data-lang-en="URL Shortener" data-lang-bn="URL শর্টনার">URL Shortener</h3>
-    <p data-lang-en="Shorten your long URLs with a custom alias for easy sharing." data-lang-bn="আপনার লম্বা URL-কে কাস্টম নাম সহ ছোট করুন।">Shorten your long URLs with a custom alias for easy sharing.</p>
-    <a href="url_shortener.html" class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</a>
-                </div>      
+                    <div class="icon-wrapper">
+                        <i class="ri-link-m icon"></i>
+                    </div>
+                    <h3 data-lang-en="URL Shortener" data-lang-bn="URL শর্টনার">URL Shortener</h3>
+                    <p data-lang-en="Shorten your long URLs with a custom alias for easy sharing." data-lang-bn="আপনার লম্বা URL-কে কাস্টম নাম সহ ছোট করুন।">Shorten your long URLs with a custom alias for easy sharing.</p>
+                    <button class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</button>
+                </div>
 
                 <div class="tool-card" tabindex="0" data-category="calculators" data-lang-en-title="Niche Calculators" data-lang-bn-title="নির্দিষ্ট ক্যালকুলেটর" data-lang-en-desc="A collection of specialized calculators like BMI, EMI, and more." data-lang-bn-desc="BMI, EMI, এবং অন্যান্য প্রয়োজনীয় ক্যালকুলেটর ব্যবহার করুন।">
                     <div class="icon-wrapper">
