--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                         <i class="ri-a-b icon"></i>
                     </div>
                     <h3 data-lang-en="Case Converter" data-lang-bn="কেস কনভার্টার">Case Converter</h3>
-                    <p data-lang-en="Convert text to different cases: uppercase, lowercase, title case, etc." data-lang-bn="টেক্সটকে বিভিন্ন কেসে রূপান্তর করুন:Uppercase, lowercase, Title Case ইত্যাদি।">Convert text to different cases: uppercase, lowercase, title case, etc.</p>
+                    <p data-lang-en="Convert text to different cases: uppercase, lowercase, title case, etc." data-lang-bn="টেক্সটকে বিভিন্ন কেসে রূপান্তর করুন:Uppercase, lowercase, Title Case ইত্যাদি।">Convert text to different cases: uppercase, lowercase, Title Case ইত্যাদি।</p>
                     <button class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</button>
                 </div>
 
