--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                     </div>
                     <h3 data-lang-en="QR Code Generator" data-lang-bn="QR কোড জেনারেটর">QR Code Generator</h3>
                     <p data-lang-en="Create custom QR codes for URLs, text, and WiFi passwords." data-lang-bn="আপনার URL, টেক্সট, ওয়াইফাই পাসওয়ার্ডের জন্য কাস্টম QR কোড তৈরি করুন।">Create custom QR codes for URLs, text, and WiFi passwords.</p>
-                    <button class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</button>
+                    <a href="url_shortener.html" class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</a>
                 </div>
 
                 <div class="tool-card" tabindex="0" data-category="developer" data-lang-en-title="URL Shortener" data-lang-bn-title="URL শর্টনার" data-lang-en-desc="Shorten your long URLs with a custom alias for easy sharing." data-lang-bn-desc="আপনার লম্বা URL-কে কাস্টম নাম সহ ছোট করুন।">
