--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                     </div>
                     <h3 data-lang-en="Niche Calculators" data-lang-bn="নির্দিষ্ট ক্যালকুলেটর">Niche Calculators</h3>
                     <p data-lang-en="A collection of specialized calculators like BMI, EMI, and more." data-lang-bn="BMI, EMI, এবং অন্যান্য প্রয়োজনীয় ক্যালকুলেটর ব্যবহার করুন।">A collection of specialized calculators like BMI, EMI, and more.</p>
-                    <a href="niche_calculators.html" class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</a>
+                    <a href="calculators.html" class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</a>
                 </div>
 
                 <div class="tool-card" tabindex="0" data-category="developer" data-lang-en-title="JSON Formatter" data-lang-bn-title="JSON ফরম্যাটার" data-lang-en-desc="Format and validate your JSON data instantly for clean code." data-lang-bn-desc="ডেভেলপারদের জন্য দ্রুত JSON ডেটা ফরম্যাট এবং ভ্যালিডেট করুন।">
