--- a/index.html
+++ b/index.html
@@ -371,17 +371,22 @@
             .tools-panel .tool-cards-grid .tool-card:nth-child(2) {
                 grid-column: span 1;
             }
-            .tools-panel .tool-cards-grid .tool-card:nth-child(3) {
-                grid-column: 1 / -1;
-            }
-            .tools-panel .tool-cards-grid .tool-card:nth-child(4),
-            .tools-panel .tool-cards-grid .tool-card:nth-child(5) {
-                grid-column: span 1;
-            }
-            .tools-panel .tool-cards-grid .tool-card:nth-child(6) {
-                grid-column: 1 / -1;
+            /* Updated CSS to handle the ad's position */
+            .native-ad-container {
+                grid-column: 1 / -1; /* Spans the full width of the grid */
+                width: 100%;
+                text-align: center;
+                margin: 0;
+                display: none; /* Default hidden */
             }
 
+            .tools-panel .tool-cards-grid .tool-card:nth-child(3),
+            .tools-panel .tool-cards-grid .tool-card:nth-child(4),
+            .tools-panel .tool-cards-grid .tool-card:nth-child(5),
+            .tools-panel .tool-cards-grid .tool-card:nth-child(6) {
+                grid-column: span 1;
+            }
+            
             .footer-container { flex-direction: row; justify-content: space-between; align-items: center; }
             .footer-buttons-wrapper { display: flex; justify-content: space-between; align-items: center; width: 100%; }
             .footer-links-group { display: flex; flex-wrap: nowrap; justify-content: center; flex-grow: 1; gap: 20px; order: initial; }
@@ -391,7 +396,8 @@
             .ashiqur-popup { bottom: 80px; }
 
             /* Show desktop ad only on desktop view */
-            .ad-container.desktop-ad {
+            .ad-container.desktop-ad,
+            .native-ad-container {
                 display: block;
             }
             .ad-container.desktop-ad .ad-iframe-container {
@@ -506,6 +512,11 @@
                     <p data-lang-en="A collection of specialized calculators like BMI, EMI, and more." data-lang-bn="BMI, EMI, এবং অন্যান্য প্রয়োজনীয় ক্যালকুলেটর ব্যবহার করুন।">A collection of specialized calculators like BMI, EMI, and more.</p>
                     <a href="calculators.html" class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন" target="_blank" rel="noopener noreferrer">Use Tool</a>
                 </div>
+                
+                <div class="native-ad-container">
+                    <script async="async" data-cfasync="false" src="//pl27408554.profitableratecpm.com/45718544708b185acff6d14248cc94cd/invoke.js"></script>
+                    <div id="container-45718544708b185acff6d14248cc94cd"></div>
+                </div>
 
                 <div class="tool-card" tabindex="0" data-category="social" data-lang-en-title="Facebook Free Like Follow" data-lang-bn-title="ফেসবুক ফ্রি লাইক ফলো" data-lang-en-desc="Boost your Facebook page's likes and followers for free." data-lang-bn-desc="আপনার ফেসবুক পেজের লাইক এবং ফলোয়ার বিনামূল্যে বাড়ান।">
                     <div class="icon-wrapper"> <i class="ri-facebook-fill icon"></i> </div>
@@ -554,7 +565,7 @@
                     </div>
                     <h3 data-lang-en="Tasks" data-lang-bn="কাজ">Tasks</h3>
                     <p data-lang-en="Make money with simple online tasks." data-lang-bn="সহজ অনলাইন কাজ করে টাকা আয় করুন।">Make money with simple online tasks.</p>
-                    <a href="#" class="join-offer-btn" data-lang-en="Join Offer" data-lang-bn="অফারে যোগ দিন">Join Offer</a>
+                    <a href="#" class="join-offer-btn" data-lang-bn="অফারে যোগ দিন">Join Offer</a>
                 </div>
                 <div class="offer-card" data-card-index="2">
                     <div class="icon-wrapper">
