--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -241,8 +240,8 @@
         .offer-card:hover .icon, .offer-card:focus .icon { transform: scale(1.1); }
         .offer-card h3 { font-size: 24px; font-weight: 600; margin-bottom: 10px; }
         .offer-card p { font-size: 16px; color: var(--secondary-text); margin-bottom: 20px; flex-grow: 1; display: flex; align-items: center; justify-content: center; transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out; }
-        .join-offer-btn { display: inline-block; background-color: var(--green-color); color: #fff; padding: 12px 25px; border-radius: 8px; text-decoration: none; font-weight: 700; font-size: 16px; transition: background-color 0.2s ease, box-shadow 0.2s ease; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
-        .join-offer-btn:hover { background-color: #218838; }
+        /* .join-offer-btn { display: inline-block; background-color: var(--green-color); color: #fff; padding: 12px 25px; border-radius: 8px; text-decoration: none; font-weight: 700; font-size: 16px; transition: background-color 0.2s ease, box-shadow 0.2s ease; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
+        .join-offer-btn:hover { background-color: #218838; } */
         .dark-mode .offer-card .icon-wrapper { background-color: #2E3A59; }
 
         /* --- Blog Section CSS (Updated to reduce space) --- */
@@ -519,21 +518,21 @@
                     <div class="icon-wrapper"> <i class="ri-file-image-line icon"></i> </div>
                     <h3 data-lang-en="Image to PDF" data-lang-bn="ছবি থেকে PDF">Image to PDF</h3>
                     <p data-lang-en="Convert multiple images to a single PDF document easily." data-lang-bn="একাধিক ছবিকে সহজেই একটি PDF ডকুমেন্টে রূপান্তর করুন।">Convert multiple images to a single PDF document easily.</p>
-                    <a href="#" class="use-tool-btn coming-soon" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</a>
+                    <a href="#" class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন" target="_blank" rel="noopener noreferrer">Use Tool</a>
                 </div>
 
                 <div class="tool-card" tabindex="0" data-category="utilities" data-lang-en-title="QR Code Generator" data-lang-bn-title="QR কোড জেনারেটর" data-lang-en-desc="Create scannable QR codes from text, links, or contacts." data-lang-bn-desc="টেক্সট, লিংক বা যোগাযোগ থেকে স্ক্যানযোগ্য QR কোড তৈরি করুন।">
                     <div class="icon-wrapper"> <i class="ri-qr-code-line icon"></i> </div>
                     <h3 data-lang-en="QR Code Generator" data-lang-bn="QR কোড জেনারেটর">QR Code Generator</h3>
                     <p data-lang-en="Create scannable QR codes from text, links, or contacts." data-lang-bn="টেক্সট, লিংক বা যোগাযোগ থেকে স্ক্যানযোগ্য QR কোড তৈরি করুন।">Create scannable QR codes from text, links, or contacts.</p>
-                    <a href="#" class="use-tool-btn coming-soon" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</a>
+                    <a href="#" class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন" target="_blank" rel="noopener noreferrer">Use Tool</a>
                 </div>
 
                 <div class="tool-card" tabindex="0" data-category="security" data-lang-en-title="Password Generator" data-lang-bn-title="পাসওয়ার্ড জেনারেটর" data-lang-en-desc="Generate strong, secure, and unique passwords instantly." data-lang-bn-desc="শক্তিশালী, সুরক্ষিত এবং অনন্য পাসওয়ার্ড দ্রুত তৈরি করুন।">
                     <div class="icon-wrapper"> <i class="ri-lock-password-line icon"></i> </div>
                     <h3 data-lang-en="Password Generator" data-lang-bn="পাসওয়ার্ড জেনারেটর">Password Generator</h3>
                     <p data-lang-en="Generate strong, secure, and unique passwords instantly." data-lang-bn="শক্তিশালী, সুরক্ষিত এবং অনন্য পাসওয়ার্ড দ্রুত তৈরি করুন।">Generate strong, secure, and unique passwords instantly.</p>
-                    <a href="#" class="use-tool-btn coming-soon" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন">Use Tool</a>
+                    <a href="#" class="use-tool-btn" data-lang-en="Use Tool" data-lang-bn="টুল ব্যবহার করুন" target="_blank" rel="noopener noreferrer">Use Tool</a>
                 </div>
 
             </div>
@@ -549,7 +548,7 @@
                     </div>
                     <h3 data-lang-en="Income" data-lang-bn="ইনকাম">Income</h3>
                     <p data-lang-en="Earn $100 daily from home." data-lang-bn="ঘরে বসে রোজ $100 আয় করুন।">Earn $100 daily from home.</p>
-                    <a href="#" class="join-offer-btn" data-lang-en="Join Offer" data-lang-bn="অফারে যোগ দিন">Join Offer</a>
+                    <a href="#" class="use-tool-btn" data-lang-en="Join Offer" data-lang-bn="অফারে যোগ দিন" target="_blank" rel="noopener noreferrer">Join Offer</a>
                 </div>
                 <div class="offer-card" data-card-index="1" tabindex="0">
                     <div class="icon-wrapper">
@@ -557,7 +556,7 @@
                     </div>
                     <h3 data-lang-en="Tasks" data-lang-bn="কাজ">Tasks</h3>
                     <p data-lang-en="Make money with simple online tasks." data-lang-bn="সহজ অনলাইন কাজ করে টাকা আয় করুন।">Make money with simple online tasks.</p>
-                    <a href="#" class="join-offer-btn" data-lang-en="Join Offer" data-lang-bn="অফারে যোগ দিন">Join Offer</a>
+                    <a href="#" class="use-tool-btn" data-lang-en="Join Offer" data-lang-bn="অফারে যোগ দিন" target="_blank" rel="noopener noreferrer">Join Offer</a>
                 </div>
                 <div class="offer-card" data-card-index="2" tabindex="0">
                     <div class="icon-wrapper">
@@ -565,7 +564,7 @@
                     </div>
                     <h3 data-lang-en="Community" data-lang-bn="কমিউনিটি">Community</h3>
                     <p data-lang-en="Start your online business with us." data-lang-bn="আমাদের সাথে আপনার অনলাইন ব্যবসা শুরু করুন।">Start your online business with us.</p>
-                    <a href="#" class="join-offer-btn" data-lang-en="Join Offer" data-lang-bn="অফারে যোগ দিন">Join Offer</a>
+                    <a href="#" class="use-tool-btn" data-lang-en="Join Offer" data-lang-bn="অফারে যোগ দিন" target="_blank" rel="noopener noreferrer">Join Offer</a>
                 </div>
             </div>
         </section>
@@ -578,7 +577,7 @@
                     <div class="blog-card-content">
                         <h3 data-lang-en="Unleash Your Productivity: 7 Secret Hacks for Digital Success" data-lang-bn="আপনার উৎপাদনশীলতা বাড়ান: ডিজিটাল সাফল্যের ৭ গোপন কৌশল">Unleash Your Productivity: 7 Secret Hacks for Digital Success</h3>
                         <p data-lang-en="Discover the ultimate techniques to supercharge your daily workflow and save hours of time. These simple tricks will change how you work forever." data-lang-bn="আপনার দৈনন্দিন কাজের গতি বাড়াতে এবং মূল্যবান সময় বাঁচাতে দারুণ কিছু কৌশল আবিষ্কার করুন। এই সাধারণ কৌশলগুলি আপনার কাজ করার পদ্ধতি চিরতরে বদলে দেবে।">Discover the ultimate techniques to supercharge your daily workflow and save hours of time. These simple tricks will change how you work forever.</p>
-                        <a href="#" class="read-more-btn" data-lang-en="Read More" data-lang-bn="আরও পড়ুন">Read More <i class="ri-arrow-right-line"></i></a>
+                        <a href="#" class="use-tool-btn" data-lang-en="Read More" data-lang-bn="আরও পড়ুন" target="_blank" rel="noopener noreferrer">Read More <i class="ri-arrow-right-line"></i></a>
                     </div>
                 </div>
                 <div class="blog-card">
@@ -586,7 +585,7 @@
                     <div class="blog-card-content">
                         <h3 data-lang-en="The Ultimate Guide to Gaining Free Facebook Followers in 2025" data-lang-bn="২০২৫ সালে বিনামূল্যে ফেসবুক ফলোয়ার পাওয়ার সেরা গাইড">The Ultimate Guide to Gaining Free Facebook Followers in 2025</h3>
                         <p data-lang-en="Want to grow your Facebook page without spending a dime? Our step-by-step guide reveals the best free methods that actually work." data-lang-bn="কোনো খরচ ছাড়াই আপনার ফেসবুক পেজ বড় করতে চান? আমাদের ধাপে ধাপে নির্দেশিকাটি এমন কিছু সেরা বিনামূল্যে পদ্ধতি প্রকাশ করবে যা সত্যিই কাজ করে।">Want to grow your Facebook page without spending a dime? Our step-by-step guide reveals the best free methods that actually work.</p>
-                        <a href="#" class="read-more-btn" data-lang-en="Read More" data-lang-bn="আরও পড়ুন">Read More <i class="ri-arrow-right-line"></i></a>
+                        <a href="#" class="use-tool-btn" data-lang-en="Read More" data-lang-bn="আরও পড়ুন" target="_blank" rel="noopener noreferrer">Read More <i class="ri-arrow-right-line"></i></a>
                     </div>
                 </div>
                 <div class="blog-card">
@@ -594,7 +593,7 @@
                     <div class="blog-card-content">
                         <h3 data-lang-en="Why You Need a URL Shortener: The Key to Professional Branding" data-lang-bn="কেন আপনার URL শর্টনার প্রয়োজন: পেশাদার ব্র্যান্ডিংয়ের মূল চাবিকাঠি">Why You Need a URL Shortener: The Key to Professional Branding</h3>
                         <p data-lang-en="Learn how a simple URL shortener can transform your branding and improve your marketing campaigns. It's more than just a short link." data-lang-bn="একটি সাধারণ URL শর্টনার কীভাবে আপনার ব্র্যান্ডিংকে উন্নত করতে এবং আপনার বিপণন প্রচারাভিযানকে আরও কার্যকরী করতে পারে তা জানুন।">Learn how a simple URL shortener can transform your branding and improve your marketing campaigns. It's more than just a short link.</p>
-                        <a href="#" class="read-more-btn" data-lang-en="Read More" data-lang-bn="আরও পড়ুন">Read More <i class="ri-arrow-right-line"></i></a>
+                        <a href="#" class="use-tool-btn" data-lang-en="Read More" data-lang-bn="আরও পড়ুন" target="_blank" rel="noopener noreferrer">Read More <i class="ri-arrow-right-line"></i></a>
                     </div>
                 </div>
             </div>
@@ -670,7 +669,6 @@
             const searchInput = document.getElementById('search-input');
             const toolCards = document.querySelectorAll('.tool-card');
             const noResultsMessage = document.querySelector('.no-results');
-            const comingSoonBtns = document.querySelectorAll('.coming-soon');
             const modeToggleBtn = document.querySelector('.mode-toggle');
 
             const testimonials = [
@@ -985,14 +983,6 @@
 
             checkVisibility();
             window.addEventListener('scroll', checkVisibility);
-
-            // Coming soon functionality for new tool cards
-            comingSoonBtns.forEach(btn => {
-                btn.addEventListener('click', (e) => {
-                    e.preventDefault();
-                    alert("Coming Soon...");
-                });
-            });
 
             // Dark/Light Mode Toggle functionality
             modeToggleBtn.addEventListener('click', () => {
